fix(signin): signiner info overflow-y

--- a/client/src/pages/SignIn/SigninInfo/index.less
+++ b/client/src/pages/SignIn/SigninInfo/index.less
@@ -37,6 +37,7 @@
       font-size: 14PX;
       color: @title-text;
       margin-bottom: 12px;
+      overflow-y: hidden;
     }
 
     &--desc {
